change depends on app docker compose option to array

--- a/docker-compose-pi.yml
+++ b/docker-compose-pi.yml
@@ -37,10 +37,8 @@ services:
       retries: 3
   app:
     depends_on:
-      mariadb:
-        condition: service_healthy
-      mosquitto:
-        condition: service_healthy
+      - mariadb
+      - mosquitto
     links:
       - mariadb
       - mosquitto
