--- a/docker-compose-pi.yml
+++ b/docker-compose-pi.yml
@@ -3,7 +3,7 @@ services:
   mariadb:
     image: tobi312/rpi-mariadb:10.5-debian
     container_name: mariadb
-    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_bin
+    command: --skip-grant-tables
     environment:
       MARIADB_ROOT_PASSWORD: password
       MARIADB_DATABASE: home-automation
